# peroxide

./: LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
src/peroxide/: __init__.py  __main__.py
src/tests/: test_main.py
