# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peroxide"
version = "1.0.0"
description = "An LLM input sanitiser."
readme = "README.md"
authors = [{ name = "Tolga Pasin"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["peroxide", "llm", "sanitiser", "injection", "security"]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/tolgapasin/peroxide"

[project.scripts]
peroxide = "peroxide.__main__:main"